--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le Hotel Kep</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./The Le Hotel Kep Website -- image assets/Le Hotel Kep.png">
 </head>
 <body>
     <header>
